--- a/lang/imoptimal-animations.pot
+++ b/lang/imoptimal-animations.pot
@@ -37,7 +37,7 @@ msgid "Instructions"
 msgstr ""
 
 #: inc/options-page.php:13
-msgid "First of all, set the number of animation groups that You can target with different animation settings (up to 100)."
+msgid "First of all, set the number of animation groups that you can target with different animation settings (up to 100 groups)."
 msgstr ""
 
 #: inc/options-page.php:14
@@ -49,7 +49,7 @@ msgid "Open each animation group by clicking on its title bar."
 msgstr ""
 
 #: inc/options-page.php:16
-msgid "Add the items you would like to animate when they enter the screens viewport (visible area of a web page)."
+msgid "Add the items you would like to animate either when they enter the screens viewport (visible area of a web page), or when they are hovered over."
 msgstr ""
 
 #: inc/options-page.php:17
@@ -57,7 +57,7 @@ msgid "Select the type of animation for that group of items (check the preview o
 msgstr ""
 
 #: inc/options-page.php:18
-msgid "Choose the duration of the animation (1 - 5 sec)."
+msgid "Choose the duration of the animation (0.5 - 5 sec)."
 msgstr ""
 
 #: inc/options-page.php:19
@@ -65,11 +65,11 @@ msgid "Choose the repetition of the animation (Once, Twice... - Five Times; Infi
 msgstr ""
 
 #: inc/options-page.php:20
-msgid "Choose if the animation will be triggered every time selected items enter screens viewport. Default: false."
+msgid "Choose if the animation will be triggered every time selected items enter screens viewport. There is also an option to trigger animation on hover instead. Default: false."
 msgstr ""
 
 #: inc/options-page.php:21
-msgid "Choose the delay duration of animation when entering screens viewport (1 - 5 sec). Default: no delay."
+msgid "Choose the delay duration of animation when entering screens viewport (0.5 - 5 sec). Default: no delay."
 msgstr ""
 
 #: inc/options-page.php:24
@@ -77,7 +77,7 @@ msgid "Note: \"Save Meta Options\" button is used to save the number of animatio
 msgstr ""
 
 #: inc/options-page.php:26
-msgid "IMPORTANT: Javascript must be turned ON in Your browser settings in order for this plugin to work!"
+msgid "IMPORTANT: Javascript must be turned ON in your browser settings in order for this plugin to work!"
 msgstr ""
 
 #: inc/options-page.php:31
@@ -129,7 +129,7 @@ msgid "Contact us"
 msgstr ""
 
 #: inc/register-settings.php:32
-msgid "Choose how many groups of items You need (to target with different type of animation)"
+msgid "Choose how many groups of items you need (to target with different type of animation)"
 msgstr ""
 
 #: inc/register-settings.php:47
@@ -141,7 +141,7 @@ msgid "Animation Group"
 msgstr ""
 
 #: inc/register-settings.php:81
-msgid "Items to animate when they enter screens viewport (use CSS selectors). Separate individual items by commas"
+msgid "Items to animate (use CSS selectors). Separate individual items by commas"
 msgstr ""
 
 #: inc/register-settings.php:92
@@ -157,7 +157,7 @@ msgid "Choose the repetition count of the animation"
 msgstr ""
 
 #: inc/register-settings.php:125
-msgid "Choose if the animation will be triggered repeatedly every time selected items enter screens viewport"
+msgid "Choose if the animation will be triggered repeatedly every time selected items enter screens viewport. There is also an option to trigger animation on hover instead."
 msgstr ""
 
 #: inc/register-settings.php:136
@@ -176,34 +176,38 @@ msgstr ""
 msgid "Select duration of animation from the dropdown menu"
 msgstr ""
 
-#: inc/render-fields.php:169
+#: inc/render-fields.php:174
 msgid "Once"
 msgstr ""
 
-#: inc/render-fields.php:170
+#: inc/render-fields.php:175
 msgid "Twice"
 msgstr ""
 
-#: inc/render-fields.php:171
+#: inc/render-fields.php:176
 msgid "Three times"
 msgstr ""
 
-#: inc/render-fields.php:172
+#: inc/render-fields.php:177
 msgid "Four times"
 msgstr ""
 
-#: inc/render-fields.php:173
+#: inc/render-fields.php:178
 msgid "Five times"
 msgstr ""
 
-#: inc/render-fields.php:184
+#: inc/render-fields.php:189
 msgid "False (Do not re-animate)"
 msgstr ""
 
-#: inc/render-fields.php:185
-msgid "Re-animate when items enter viewport)"
+#: inc/render-fields.php:190
+msgid "Re-animate when items enter viewport"
 msgstr ""
 
-#: inc/render-fields.php:196
+#: inc/render-fields.php:191
+msgid "Animate items on hover"
+msgstr ""
+
+#: inc/render-fields.php:202
 msgid "No delay"
 msgstr ""
